# mcp-inotes

./: LICENSE  README.md  main.py  pyproject.toml
src/: notes_service.py  server.py
